# mauro

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  README.md.jinja  pixi.toml  pixi.toml.jinja  pyproject.toml
.github/workflows/: ci.yml  ci.yml.jinja
