[project]
name = "mauro"
description = "Test package"
dynamic = ["version"]
authors = [{ name = "Mauro Silberberg", email = "maurosilber@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"

[project.urls]
Homepage = "https://github.com/maurosilber/mauro"
Issues = "https://github.com/maurosilber/mauro/issues"
Documentation = "https://maurosilber.github.io/mauro"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = true }]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = "."

[tool.ruff.lint]
